
=item * switch -r now reserved for restricted mode, new switch -f for alternative resource file - warp [2000-03-12]

=item * Fixed problem with quoting which was not removed for the executable strategy - warp [2000-03-12]

=item * Builtin unalias does not remove builtins of the same name anymore - warp [2000-03-14]

=back

=cut

###############################################################################
###############################################################################
##
## 0.007
##
###############################################################################
###############################################################################


=head1 0.007 [2000-02-14]

Contributions primarily by Markus Peter (C<warp>) and Simon Huggins
(C<huggie>).


=head2 New Features

=over 4

=item *

Support for window titles. New environment variable C<$PSH_TITLE>,
C<$Psh::change_title>, C<$Psh::window_title>. The behavior is like prompt
strings.

=item *

Strategy B<perlfunc> is a default strategy again. C<$Psh::perlfunc_builtins>
determines wether Perl builtins should be C<eval>ed (default 0)

=item *

Builtin B<kill> now supports sending a signal to a named job (e.g. "C<emacs & ;
kill emacs>").

=item *

Builtin B<strategy> for loading strategies on demand and adding them to
the list of strategies to use. Handy for strategies that are used less often
than the core strategies.

=item *

Properly pipeable aliases.

=item *

Fallback and most other builtins are loaded on demand.

=item *

Converted C<&Psh::symbols()> into a builtin, B<symbols>.

=item *

New builtin B<set>.  Acts like B<bash>'s B<set> and returns environment.  Could be
extended to allow C<set -o noclobber> B<bash>-isms to work.

=item *

New strategy C<auto_cd>.

=item *

Builtin B<strategy> now knows command B<available> to list available strategies

=back


=head2 Bug Fixes

=over 4

=item *

The Unix resize handler now works correctly in big B<xterm>s.

=item *
